# keepass-dump-extractor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
